--- a/src/Components/Chat.css
+++ b/src/Components/Chat.css
@@ -4,7 +4,7 @@
     height: auto;
     position: relative;
     right: 0;
-    
+    border-radius: 10px;
     /* padding-left: 10px; */
 }
 .sender{
@@ -12,6 +12,7 @@
     width: 30vh;
     height: auto;
     left: 0;
+    border-radius: 10px;
 }
 .chat{
     position: relative;
