--- a/src/Components/Dashboard.css
+++ b/src/Components/Dashboard.css
@@ -33,7 +33,7 @@
     width: 30vw;
     height: 100px;
     display: flex;
-    justify-content: start;
+    justify-content: space-between;
     align-items: center;
     /* background-color: rgba(35, 61, 77, 0.281); */
     background-color: whitesmoke;
@@ -190,8 +190,9 @@
     background-color: rgba(96, 96, 148, 0.548);
     position: relative;
     left: 5px;
-    width: 110px;
-    height: 2.5vh;
+    width: auto;
+    min-width: 110px;
+    height: auto;
     border-radius:  3px;
     border-color: transparent;
 }
@@ -200,7 +201,7 @@
     position: relative;
     left: 5px;
     width: 5vw;
-    height: 2.5vh;
+    height: auto;
     border-radius:  3px;
     border-color: transparent;
 }
@@ -361,8 +362,12 @@ textarea{
     height: 20px;
     width: 20px;
 }
-
-@media(max-width: 1000px){
+.in-game{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+@media(max-width: 875px){
     .hello-world{
         height: 4vh;
         position: relative;
